game rules text tweaks.
[CL 2668309 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultRules.ini
+++ b/UnrealTournament/Config/DefaultRules.ini
@@ -24,7 +24,7 @@
 UniqueTag=LGiCTF
 Title=Low-Grav-Insta CTF
 Tooltip=One hit one kill CTF with low gravity.
-Description=Capture the Flag with Instagib rifles in low gravity.\n\n<UT.Hub.RulesText_Small>Mutators : Instagib, Low Gravity</>\n<UT.Hub.RulesText_Small>TimeLimit : 2x 7 minute halfs</>\n<UT.Hub.RulesText_Small>Mercy Rule : On</>\n\nMaximum of 12 players allowed!
+Description=Capture the Flag with Instagib rifles in low gravity.\n\n<UT.Hub.RulesText_Small>Mutators : Instagib, Low Gravity</>\n<UT.Hub.RulesText_Small>TimeLimit : 2x 7 minute halfs</>\n<UT.Hub.RulesText_Small>Mercy Rule : On</>\n<UT.Hub.RulesText_Small>Maximum of 12 players allowed.</>
 MaxPlayers=16
 MinPlayersToStart=2;
 
