Turned match summary back on.  Set it up to have just a run through of players before the match and the winning team at the end of the match, followed by the local player's match summary.
[CL 2670592 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -152,6 +152,7 @@ HitchSmoothingRate=0.5
 NormalSmoothingRate=0.1
 MaximumSmoothedTime=0.04
 ParallelRendererProcessorRequirement=4
+bShowMatchsummary=true
 
 !NetDriverDefinitions=ClearArray
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemUtils.IpNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
