Added audio menu option to enable or disable bot speech.
[CL 2672209 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGameUserSettings.ini
+++ b/UnrealTournament/Config/DefaultGameUserSettings.ini
@@ -6,6 +6,7 @@ ResolutionSizeY=1080
 FullscreenMode=0
 AAMode=4
 ScreenPercentage=100
+bBotSpeechEnabled=true
 
 [ScalabilityGroups]
 sg.ResolutionQuality=100
