Allow admins to pause the game remotely
[CL 2679095 by Matt Oelfke in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -4,6 +4,7 @@ bEnableMouseSmoothing=false
 .DebugExecBindings=(Key="O",Command="slomo 10",Control=False,Shift=False,Alt=True)
 .DebugExecBindings=(Key="O",Command="slomo 1",Control=True,Shift=False,Alt=False)
 .DebugExecBindings=(Key="O",Command="slomo .5",Control=False,Shift=True,Alt=False)
+-DebugExecBindings=(Key=Pause,Command="Pause")
 
 -AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
 
@@ -111,6 +112,7 @@ bUseMouseForTouch=False
 +CustomBinds=(KeyName=I,Command="GhostStart")
 +CustomBinds=(KeyName=O,Command="GhostStop")
 +CustomBinds=(KeyName=P,Command="GhostPlay")
++CustomBinds=(KeyName=Pause,Command="Pause")
 
 +SpectatorBinds=(KeyName=Home,Command="EnableAutoCam")
 +SpectatorBinds=(KeyName=Divide,Command="ViewFlag 0")
