--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -1,10 +1,5 @@
 [/Script/Engine.InputSettings]
 bEnableMouseSmoothing=false
-.DebugExecBindings=(Key="O",Command="slomo 5")
-.DebugExecBindings=(Key="O",Command="slomo 10",Control=False,Shift=False,Alt=True)
-.DebugExecBindings=(Key="O",Command="slomo 1",Control=True,Shift=False,Alt=False)
-.DebugExecBindings=(Key="O",Command="slomo .5",Control=False,Shift=True,Alt=False)
--DebugExecBindings=(Key=Pause,Command="Pause")
 
 -AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
 
@@ -95,6 +90,26 @@ bUseMouseForTouch=False
 +ActionMappings=(ActionName="TeamTalk", Key=Y)
 
 [/Script/UnrealTournament.UTPlayerInput]
++DebugExecBindings=(Key=F11,Command="LevelEditor.ToggleImmersive")
++DebugExecBindings=(Key=F11,Command="MainFrame.ToggleFullscreen",Shift=True)
++DebugExecBindings=(Key=F1,Command="ShowMouseCursor",Shift=True)
++DebugExecBindings=(Key=F1,Command="viewmode wireframe", bIgnoreShift=True)
++DebugExecBindings=(Key=F2,Command="viewmode unlit")
++DebugExecBindings=(Key=F3,Command="viewmode lit")
++DebugExecBindings=(Key=F4,Command="viewmode detaillighting")
++DebugExecBindings=(Key=F5,Command="viewmode shadercomplexity")
++DebugExecBindings=(Key=F9,Command="shot showui")
++DebugExecBindings=(Key=Period,Command="RECOMPILESHADERS CHANGED",Control=True,Shift=True)
++DebugExecBindings=(Key=Comma,Command="PROFILEGPU",Control=True,Shift=True)
++DebugExecBindings=(Key=Escape,Command="CloseEditorViewport")
++DebugExecBindings=(Key=Tab,Command="FocusNextPIEWindow",Control=True)
++DebugExecBindings=(Key=Tab,Command="FocusLastPIEWindow",Control=True,Shift=True)
++DebugExecBindings=(Key=Apostrophe,Command="EnableGDT")
+.DebugExecBindings=(Key="O",Command="slomo 5")
+.DebugExecBindings=(Key="O",Command="slomo 10",Control=False,Shift=False,Alt=True)
+.DebugExecBindings=(Key="O",Command="slomo 1",Control=True,Shift=False,Alt=False)
+.DebugExecBindings=(Key="O",Command="slomo .5",Control=False,Shift=True,Alt=False)
+
 +CustomBinds=(KeyName=Q,Command="ToggleTranslocator")
 +CustomBinds=(KeyName=One,Command="SwitchWeapon 1")
 +CustomBinds=(KeyName=Two,Command="SwitchWeapon 2")
