--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -170,6 +170,10 @@ bEnableXmpp=true
 ServerID=6ff43e743edc4d1dbac3594877b4bed9
 ServerSecret=54619d6f84d443e195200b54ab649a53
 
+[Core.System]
+MaxObjectsNotConsideredByGC=1
+SizeOfPermanentObjectPool=10485760
+
 [Core.Log]
 LogOnline=Warning
 LogHTTP=Warning
