--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -116,7 +116,7 @@ TEXTUREGROUP_Effects=(MinLODSize=1,MaxLODSize=2048,LODBias=0,MinMagFilter=linear
 TEXTUREGROUP_EffectsNotFiltered=(MinLODSize=1,MaxLODSize=2048,LODBias=0,MinMagFilter=aniso,MipFilter=point)
 TEXTUREGROUP_Skybox=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
 TEXTUREGROUP_UI=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
-TEXTUREGROUP_Lightmap=(MinLODSize=1,MaxLODSize=2048,LODBias=-2,MinMagFilter=aniso,MipFilter=point)
+TEXTUREGROUP_Lightmap=(MinLODSize=1,MaxLODSize=2048,LODBias=0,MinMagFilter=aniso,MipFilter=point)
 TEXTUREGROUP_Shadowmap=(MinLODSize=1,MaxLODSize=2048,LODBias=0,MinMagFilter=aniso,MipFilter=point,NumStreamedMips=3)
 TEXTUREGROUP_RenderTarget=(MinLODSize=1,MaxLODSize=2048,LODBias=0,MinMagFilter=aniso,MipFilter=point)
 TEXTUREGROUP_MobileFlattened=(MinLODSize=1,MaxLODSize=2048,LODBias=0,MinMagFilter=aniso,MipFilter=point)
@@ -124,6 +124,11 @@ TEXTUREGROUP_Terrain_Heightmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFil
 TEXTUREGROUP_Terrain_Weightmap=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=aniso,MipFilter=point)
 TEXTUREGROUP_Bokeh=(MinLODSize=1,MaxLODSize=256,LODBias=0,MinMagFilter=linear,MipFilter=linear)
 TEXTUREGROUP_Pixels2D=(MinLODSize=1,MaxLODSize=4096,LODBias=0,MinMagFilter=point,MipFilter=point)
+
+[TextureStreaming]
+LightmapStreamingFactor=1.0
+ShadowmapStreamingFactor=1.0
+BoostPlayerTextures=1.0
 
 [SystemSettingsEditor]
 r.RHICmdBypass=1
