--- a/UnrealTournament/Config/DefaultScalability.ini
+++ b/UnrealTournament/Config/DefaultScalability.ini
@@ -155,21 +155,25 @@ r.TonemapperFilm=1
 ;-----------------------------------------------------------------------------------------------------------------
 
 [TextureQuality@0]
-r.Streaming.MipBias=2.5
+r.Streaming.Boost=0.3
+r.Streaming.MipBias=0
 r.MaxAnisotropy=0
 r.Streaming.PoolSize=500
 
 [TextureQuality@1]
-r.Streaming.MipBias=1
+r.Streaming.Boost=0.5
+r.Streaming.MipBias=0
 r.MaxAnisotropy=2
 r.Streaming.PoolSize=750
 
 [TextureQuality@2]
+r.Streaming.Boost=1
 r.Streaming.MipBias=0
 r.MaxAnisotropy=4
 r.Streaming.PoolSize=1500
 
 [TextureQuality@3]
+r.Streaming.Boost=1
 r.Streaming.MipBias=0
 r.MaxAnisotropy=8
 r.Streaming.PoolSize=2000
