--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -41,6 +41,9 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 +Map=/Game/RestrictedAssets/Tutorials/TUT-PickupTraining
 +Map=/Game/EpicInternal/Lea/DM-Lea
 
++Map=/Game/RestrictedAssets/Environments/Outside/TestMaps/CTF-TitanPass
++Map=/Game/RestrictedAssets/Environments/Outside/TestMaps/CTF-Face
++Map=/Game/EpicInternal/Pistola/CTF-Pistola
 
 [UI]
 +ContentDirectories=/Game/RestrictedAssets/UI
