Reduced some logspam.
[CL 2685725 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -162,6 +162,8 @@ LogModuleManager=Warning
 LogCharacterMovement=Warning
 LogActorComponent=Warning
 LogD3D11RHI=Warning
+LogHMD=Error
+LogTemp=Warning
 
 [/Script/UnrealTournament.UTLocalPlayer]
 bNoMidGameMenu=false
