--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -44,6 +44,7 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 
 [UI]
 +ContentDirectories=/Game/RestrictedAssets/UI
++ContentDirectories=/Game/RestrictedAssets/Slate/LargeImages
 +ContentDirectories=/Game/EpicInternal/Cosmetic_Items
 +ContentDirectories=/Game/EpicInternal/Teams
 +ContentDirectories=/Game/RestrictedAssets/Character/Necris_Male
