Move LargeImages out of the Slate directory so they don't stage as UFS. Stop using force cooked directories in DefaultEditor.ini and use them in DefaultGame.ini
[CL 2688346 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -43,13 +43,8 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 +Map=/Game/EpicInternal/Pistola/CTF-Pistola
 
 [UI]
-+ContentDirectories=/Game/RestrictedAssets/UI
-+ContentDirectories=/Game/RestrictedAssets/Slate/LargeImages
-+ContentDirectories=/Game/EpicInternal/Cosmetic_Items
-+ContentDirectories=/Game/EpicInternal/Teams
-+ContentDirectories=/Game/RestrictedAssets/Character/Necris_Male
-+ContentDirectories=/Game/RestrictedAssets/Blueprints/Taunts
-+ContentDirectories=/Game/RestrictedAssets/Character/Bots
+;+ContentDirectories=/Game/RestrictedAssets/UI
+;This is no longer relevant in new cook, use DirectoriesToAlwaysCook in DefaultGame.ini [/Script/UnrealEd.ProjectPackagingSettings]
 
 [UnrealEd.URLs]
 UTWikiURL="http://wiki.unrealengine.com/Category:Unreal_Tournament"
