--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -288,6 +288,13 @@ bCustomWeaponCrosshairs=True
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Audio/AnnouncerReward")
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Audio/AnnouncerStatus")
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Blueprints")
++DirectoriesToAlwaysCook=(Path="RestrictedAssets/UI")
++DirectoriesToAlwaysCook=(Path="RestrictedAssets/SlateLargeImages")
++DirectoriesToAlwaysCook=(Path="EpicInternal/Cosmetic_Items")
++DirectoriesToAlwaysCook=(Path="EpicInternal/Teams")
++DirectoriesToAlwaysCook=(Path="RestrictedAssets/Character/Necris_Male")
++DirectoriesToAlwaysCook=(Path="RestrictedAssets/Character/Bots")
+
 +DirectoriesToAlwaysStageAsUFS=(Path="RestrictedAssets/Slate")
 +DirectoriesToAlwaysStageAsUFS=(Path="RestrictedAssets/UI/Stats")
 ;This will be fixed in UE4.5, 4.4 has the wrong setting in CopyBuildToStagingDirectory.Automation.cs
