Add profile items to always cook
[CL 2689762 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -294,6 +294,7 @@ bCustomWeaponCrosshairs=True
 +DirectoriesToAlwaysCook=(Path="EpicInternal/Teams")
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Character/Necris_Male")
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Character/Bots")
++DirectoriesToAlwaysCook=(Path="RestrictedAssets/ProfileItems")
 
 +DirectoriesToAlwaysStageAsUFS=(Path="RestrictedAssets/Slate")
 +DirectoriesToAlwaysStageAsUFS=(Path="RestrictedAssets/UI/Stats")
