Added console variable for bloom dirt effect; disabled by default except on Epic settings
[CL 2694253 by Matt Oelfke in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultScalability.ini
+++ b/UnrealTournament/Config/DefaultScalability.ini
@@ -93,6 +93,7 @@ r.LensFlareQuality=0
 r.SceneColorFringeQuality=0
 r.EyeAdaptationQuality=2
 r.BloomQuality=1
+r.BloomDirt=0
 r.FastBlurThreshold=0
 r.TonemapperQuality=0
 r.LightShaftQuality=0
@@ -111,6 +112,7 @@ r.LensFlareQuality=0
 r.SceneColorFringeQuality=0
 r.EyeAdaptationQuality=2
 r.BloomQuality=3
+r.BloomDirt=0
 r.FastBlurThreshold=2
 r.TonemapperQuality=0
 r.LightShaftQuality=0
@@ -128,6 +130,7 @@ r.LensFlareQuality=2
 r.SceneColorFringeQuality=0
 r.EyeAdaptationQuality=2
 r.BloomQuality=5
+r.BloomDirt=0
 r.FastBlurThreshold=3
 r.TonemapperQuality=1
 r.LightShaftQuality=1
@@ -145,6 +148,7 @@ r.LensFlareQuality=2
 r.SceneColorFringeQuality=1
 r.EyeAdaptationQuality=2
 r.BloomQuality=5
+r.BloomDirt=1
 r.FastBlurThreshold=7
 r.TonemapperQuality=1
 r.LightShaftQuality=1
