--- a/UnrealTournament/Plugins/WebMRecord/WebMRecord.uplugin
+++ b/UnrealTournament/Plugins/WebMRecord/WebMRecord.uplugin
@@ -17,7 +17,7 @@
 		{
 			"Name" : "WebMRecord",
 			"Type" : "Runtime",
-			"WhitelistPlatforms" : [ "Win64" ]
+			"WhitelistPlatforms" : [ "Win32", "Win64" ]
 		}
 	]
 }
