--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -35,6 +35,7 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Morbiastest
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Solo
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Column
++Map=/Game/RestrictedAssets/Maps/WIP/DM-RGB
 +Map=/Game/RestrictedAssets/Maps/RaceTrack
 +Map=/Game/RestrictedAssets/Tutorials/TUT-MovementTraining
 +Map=/Game/RestrictedAssets/Tutorials/TUT-WeaponTraining
