--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -44,6 +44,7 @@ LobbyInitialTimeoutTime=120
 
 [/Script/UnrealTournament.UTDMGameMode]
 +MapRotation=/Game/RestrictedAssets/Maps/DM-Outpost23
++MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-RGB
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Solo
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Temple
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Focus
