Added CTF-Quick to map lists
[CL 2701217 by Stuart Fitzsimmons in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -133,6 +133,7 @@ bLobbyAllowJoinInProgress=true
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/CTF-Dam
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/CTF-CrashSite
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/CTF-Mine
++MapRotation=/Game/RestrictedAssets/Maps/WIP/CTF-Quick
 
 [/Script/Engine.PlayerController]
 InputYawScale=2
