--- a/UnrealTournament/Config/DefaultRules.ini
+++ b/UnrealTournament/Config/DefaultRules.ini
@@ -46,3 +46,4 @@ DefaultMap=/Game/RestrictedAssets/Maps/CTF-TitanPass
 +CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Volcano
 +CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Lance
 +CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Mine
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Quick
