New Country Flags. Thanks _Lynx!!! Fixed Switzerland texture alpha
[CL 2702761 by Tim Azevedo in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultFlags.ini
+++ b/UnrealTournament/Config/DefaultFlags.ini
@@ -25,6 +25,12 @@ UV=(U=288,V=0,UL=36,VL=26)
 [Belgium UTFlagInfo]
 UV=(U=324,V=0,UL=36,VL=26)
 
+[Bolivia UTFlagInfo]
+UV=(U=648,V=52,UL=36,VL=26)
+
+[Bosnia.and.Herzegovina UTFlagInfo]
+UV=(U=396,V=52,UL=36,VL=26)
+
 [Brazil UTFlagInfo]
 UV=(U=360,V=0,UL=36,VL=26)
 
@@ -40,6 +46,12 @@ UV=(U=468,V=0,UL=36,VL=26)
 [China UTFlagInfo]
 UV=(U=504,V=0,UL=36,VL=26)
 
+[Colombia UTFlagInfo]
+UV=(U=288,V=52,UL=36,VL=26)
+
+[Costa.Rica UTFlagInfo]
+UV=(U=468,V=52,UL=36,VL=26)
+
 [Croatia UTFlagInfo]
 UV=(U=540,V=0,UL=36,VL=26)
 
@@ -48,6 +60,12 @@ UV=(U=576,V=0,UL=36,VL=26)
 
 [Denmark UTFlagInfo]
 UV=(U=612,V=0,UL=36,VL=26)
+
+[Ecuador UTFlagInfo]
+UV=(U=612,V=52,UL=36,VL=26)
+
+[El.Salvador UTFlagInfo]
+UV=(U=504,V=52,UL=36,VL=26)
 
 [Estonia UTFlagInfo]
 UV=(U=648,V=0,UL=36,VL=26)
@@ -75,6 +93,9 @@ UV=(U=900,V=0,UL=36,VL=26)
 
 [Greece UTFlagInfo]
 UV=(U=936,V=0,UL=36,VL=26)
+
+[Honduras UTFlagInfo]
+UV=(U=540,V=52,UL=36,VL=26)
 
 [Hungary UTFlagInfo]
 UV=(U=972,V=0,UL=36,VL=26)
@@ -127,8 +148,14 @@ UV=(U=504,V=26,UL=36,VL=26)
 [New.Zealand UTFlagInfo]
 UV=(U=540,V=26,UL=36,VL=26)
 
+[Nicaragua UTFlagInfo]
+UV=(U=576,V=52,UL=36,VL=26)
+
 [Norway UTFlagInfo]
 UV=(U=576,V=26,UL=36,VL=26)
+
+[Panama UTFlagInfo]
+UV=(U=432,V=52,UL=36,VL=26)
 
 [Peru UTFlagInfo]
 UV=(U=612,V=26,UL=36,VL=26)
@@ -141,6 +168,9 @@ UV=(U=684,V=26,UL=36,VL=26)
 
 [Romani UTFlagInfo]
 UV=(U=720,V=26,UL=36,VL=26)
+
+[Romania UTFlagInfo]
+UV=(U=360,V=52,UL=36,VL=26)
 
 [Russia UTFlagInfo]
 UV=(U=756,V=26,UL=36,VL=26)
@@ -187,14 +217,11 @@ UV=(U=216,V=52,UL=36,VL=26)
 [Uruguay UTFlagInfo]
 UV=(U=252,V=52,UL=36,VL=26)
 
-[Colombia UTFlagInfo]
-UV=(U=288,V=52,UL=36,VL=26)
+[Venezuela UTFlagInfo]
+UV=(U=684,V=52,UL=36,VL=26)
 
 [Wales UTFlagInfo]
 UV=(U=324,V=52,UL=36,VL=26)
-
-[Romania UTFlagInfo]
-UV=(U=360,V=52,UL=36,VL=26)
 
 
 [Unreal UTFlagInfo]
