--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -81,6 +81,7 @@ InactivePlayerStateLifeSpan=1200
 +GameModeClassAliases=(ShortName="CTF",GameClassName="/Script/UnrealTournament.UTCTFGameMode")
 +GameModeClassAliases=(ShortName="DUEL",GameClassName="/Script/UnrealTournament.UTDuelGame")
 +GameModeClassAliases=(ShortName="SHOWDOWN",GameClassName="/Script/UnrealTournament.UTShowdownGame")
++GameModeClassAliases=(ShortName="TEAMSHOWDOWN",GameClassName="/Script/UnrealTournament.UTTeamShowdownGame")
 +GameModeClassAliases=(ShortName="LOBBY",GameClassName="/Script/UnrealTournament.UTLobbyGameMode")
 +GameModeClassAliases=(ShortName="Sample",GameClassName="/SampleGameMode/BP_SampleGameMode.BP_SampleGameMode_C")
 
