--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -28,6 +28,10 @@ TimeLimit=15
 AutoRestartTime=30
 bDisableCloudStats=false
 LobbyInitialTimeoutTime=120
+bSpeedHackDetection=true
+MaxTimeMargin=0.25
+MinTimeMargin=-0.25
+TimeMarginSlack=0.1
 
 [/Script/UnrealTournament.UTBotConfig]
 +BotCharacters=(PlayerName="Malcolm",Tactics=0.5,MapAwareness=0.7)
