Replays support redirects (the redirect URL is that at the time of recording, so the endpoint needs to still be live); "demorec/demoplay" console commands work again to use local files
[CL 2722006 by Matt Oelfke in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -135,7 +135,7 @@ ParallelRendererProcessorRequirement=4
 !NetDriverDefinitions=ClearArray
 +NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemUtils.IpNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
 +NetDriverDefinitions=(DefName="BeaconNetDriver",DriverClassName="OnlineSubsystemUtils.IpNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
-+NetDriverDefinitions=(DefName="DemoNetDriver",DriverClassName="/Script/Engine.DemoNetDriver",DriverClassNameFallback="/Script/Engine.DemoNetDriver")
++NetDriverDefinitions=(DefName="DemoNetDriver",DriverClassName="/Script/UnrealTournament.UTDemoNetDriver",DriverClassNameFallback="/Script/Engine.DemoNetDriver")
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 NetServerMaxTickRate=60
