Empty DebugExecBindings in test and shipping builds.  Moved ghost mode bindings (on i, o, p) from CustomBindings array to DebugExecBindings array.
[CL 2725102 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -105,10 +105,9 @@ bUseMouseForTouch=False
 +DebugExecBindings=(Key=Tab,Command="FocusNextPIEWindow",Control=True)
 +DebugExecBindings=(Key=Tab,Command="FocusLastPIEWindow",Control=True,Shift=True)
 +DebugExecBindings=(Key=Apostrophe,Command="EnableGDT")
-.DebugExecBindings=(Key="O",Command="slomo 5")
-.DebugExecBindings=(Key="O",Command="slomo 10",Control=False,Shift=False,Alt=True)
-.DebugExecBindings=(Key="O",Command="slomo 1",Control=True,Shift=False,Alt=False)
-.DebugExecBindings=(Key="O",Command="slomo .5",Control=False,Shift=True,Alt=False)
+.DebugExecBindings=(Key="I",Command="GhostStart")
+.DebugExecBindings=(Key="O",Command="GhostStop")
+.DebugExecBindings=(Key="P",Command="GhostPlay")
 
 +CustomBinds=(KeyName=Q,Command="ToggleTranslocator")
 +CustomBinds=(KeyName=One,Command="SwitchWeapon 1")
@@ -124,9 +123,6 @@ bUseMouseForTouch=False
 +CustomBinds=(KeyName=E,Command="SwitchToBestWeapon")
 +CustomBinds=(KeyName=H,Command="FeignDeath")
 +CustomBinds=(KeyName=F6,Command="UTBugIt auto")
-+CustomBinds=(KeyName=I,Command="GhostStart")
-+CustomBinds=(KeyName=O,Command="GhostStop")
-+CustomBinds=(KeyName=P,Command="GhostPlay")
 +CustomBinds=(KeyName=Pause,Command="Pause")
 
 +SpectatorBinds=(KeyName=Home,Command="EnableAutoCam")
