Fix FXAA not being the auto set AA mode
[CL 2725449 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -97,6 +97,7 @@ r.Cache.SampleTransitionSpeed=1200
 r.HZBOcclusion=0
 p.PenetrationPullbackDistance=0.30
 p.PenetrationOverlapCheckInflation=0.25
+r.PostProcessAAQuality=2
 demo.RecordHz=30
 
 [TextureStreaming]
