--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -43,6 +43,7 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 +Map=/Game/RestrictedAssets/Tutorials/TUT-PickupTraining
 +Map=/Game/EpicInternal/Lea/DM-Lea
 +Map=/Game/EpicInternal/Pistola/CTF-Pistola
++Map=/Game/EpicInternal/Stu/CTF-Face_Halloween
 
 [UI]
 ;+ContentDirectories=/Game/RestrictedAssets/UI
