Added Team Showdown ruleset.
[CL 2727771 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultRules.ini
+++ b/UnrealTournament/Config/DefaultRules.ini
@@ -10,6 +10,7 @@
 +AllowedRulesets=Deathmatch
 +AllowedRulesets=BigDM
 +AllowedRulesets=TDM
++AllowedRulesets=TEAMSHOWDOWN
 +AllowedRulesets=DUEL
 +AllowedRulesets=SHOWDOWN
 +AllowedRulesets=CTF
