Added an indicator for dead players on the Showdown scoreboard
[CL 2729030 by Matt Oelfke in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -250,7 +250,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidgetMessage_GameMessages"
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_SpectatorShowdown"
-+RequiredHudWidgetClasses="/Script/UnrealTournament.UTTeamScoreboard"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTShowdownScoreboard"
 
 [/Script/UnrealTournament.UTHUD_CTF]
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpHW_Paperdoll.bpHW_Paperdoll_C"
