--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -363,3 +363,6 @@ FlagCamBonus=17.0
 PowerupBonus=10.0
 HigherScoreBonus=1.5
 CurrentActionBonus=11.0
+
+[/Script/UnrealTournament.UTMenuGameMode]
+MenuMusicAssetName=/Game/RestrictedAssets/Audio/Music/Music_UTMenu_Classic.Music_UTMenu_Classic
