Temporal AA in editor
[CL 2732305 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -107,6 +107,7 @@ BoostPlayerTextures=1.0
 
 [SystemSettingsEditor]
 r.RHICmdBypass=1
+r.PostProcessAAQuality=4
 
 [/Script/Engine.RecastNavMesh]
 AgentRadius=42.f
