Fix match summary anims not cooking
[CL 2732524 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -280,6 +280,7 @@ bCustomWeaponCrosshairs=True
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Character/Necris_Male")
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Character/Bots")
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/ProfileItems")
++DirectoriesToAlwaysCook=(Path="RestrictedAssets/Animations/Universal/Misc_Poses")
 
 +DirectoriesToAlwaysStageAsUFS=(Path="RestrictedAssets/Slate")
 +DirectoriesToAlwaysStageAsUFS=(Path="RestrictedAssets/UI/Stats")
