Added foliage scalability setting
[CL 2737306 by Matt Oelfke in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultScalability.ini
+++ b/UnrealTournament/Config/DefaultScalability.ini
@@ -196,6 +196,7 @@ r.SSS.Scale = 0
 r.SSS.SampleSet=0
 r.ReflectionEnvironment=1
 r.EmitterSpawnRateScale=0.5
+Foliage.MinimumScreenSize=1.01
 
 [EffectsQuality@1]
 r.TranslucencyLightingVolumeDim=16
@@ -209,6 +210,7 @@ r.SSS.Scale = 0.75
 r.SSS.SampleSet=0
 r.ReflectionEnvironment=1
 r.EmitterSpawnRateScale=0.75
+Foliage.MinimumScreenSize=0.00006
 
 [EffectsQuality@2]
 r.TranslucencyLightingVolumeDim=24
@@ -222,6 +224,7 @@ r.SSS.Scale = 1
 r.SSS.SampleSet=1
 r.ReflectionEnvironment=1
 r.EmitterSpawnRateScale=1.0
+Foliage.MinimumScreenSize=0.000005
 
 [EffectsQuality@3]
 r.TranslucencyLightingVolumeDim=32
@@ -235,3 +238,4 @@ r.SSS.Scale = 1
 r.SSS.SampleSet=2
 r.ReflectionEnvironment=1
 r.EmitterSpawnRateScale=1.0
+Foliage.MinimumScreenSize=0.000005
