Spectator slide out polish now that it is mouse driven.
[CL 2741956 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -153,7 +153,7 @@ bUseMouseForTouch=False
 +SpectatorBinds=(KeyName=Eight,Command="ViewPlayerNum 3 1")
 +SpectatorBinds=(KeyName=Nine,Command="ViewPlayerNum 4 1")
 +SpectatorBinds=(KeyName=Zero,Command="ViewPlayerNum 5 1")
-+SpectatorBinds=(KeyName=Add,Command="ToggleSlideOut",FriendlyName="Slide Player List")
++SpectatorBinds=(KeyName=Add,Command="ToggleSlideOut")
 +SpectatorBinds=(KeyName=Enter,Command="ToggleShowBinds")
 +SpectatorBinds=(KeyName=LeftMouseButton,Command="StartCameraControl")
 +SpectatorBinds=(KeyName=LeftMouseButton,Command="EndCameraControl", EventType=IE_Released)
