MCP Profile stubs
[CL 2748192 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -337,4 +337,8 @@ Boot=(Type=Boot,Filename="%GAMEDIR%DerivedDataCache/Boot.ddc",MaxCacheSize=2000)
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[OnlineSubsystemMcp.McpProfile]
+McpClientCommandUrl="/api/game/v2/profile/`accountId/client/`fname?profileId=`profileId"
+McpDedicatedServerCommandUrl="/api/game/v2/profile/`accountId/dedicated_server/`fname?profileId=`profileId"
+McpCheatCommandUrl="/api/game/v2/profile/`accountId/cheat/`fname?profileId=`profileId"
 
