--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -141,8 +141,8 @@ bUseMouseForTouch=False
 +SpectatorBinds=(KeyName=NumPadEight,Command="ViewCamera 8")
 +SpectatorBinds=(KeyName=NumPadNine,Command="ViewCamera 9")
 +SpectatorBinds=(KeyName=NumPadZero,Command="ViewCamera 10")
-+SpectatorBinds=(KeyName=BackSpace,Command="ViewClosestVisiblePlayer",FriendlyName="Closest Player")
-+SpectatorBinds=(KeyName=Subtract,Command="ToggleBehindView",FriendlyName="Toggle 3rd Person")
++SpectatorBinds=(KeyName=BackSpace,Command="ViewClosestVisiblePlayer")
++SpectatorBinds=(KeyName=Subtract,Command="ToggleBehindView")
 +SpectatorBinds=(KeyName=One,Command="ViewPlayerNum 1 0")
 +SpectatorBinds=(KeyName=Two,Command="ViewPlayerNum 2 0")
 +SpectatorBinds=(KeyName=Three,Command="ViewPlayerNum 3 0")
