Fix query profile
[CL 2752628 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -338,7 +338,7 @@ Boot=(Type=Boot,Filename="%GAMEDIR%DerivedDataCache/Boot.ddc",MaxCacheSize=2000)
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [OnlineSubsystemMcp.McpProfile]
-McpClientCommandUrl="/api/game/v2/profile/`accountId/client/`fname?profileId=`profileId"
+McpClientCommandUrl="/api/game/profile/`accountId/`fname?profileId=`profileId"
 McpDedicatedServerCommandUrl="/api/game/v2/profile/`accountId/dedicated_server/`fname?profileId=`profileId"
 McpCheatCommandUrl="/api/game/v2/profile/`accountId/cheat/`fname?profileId=`profileId"
 
