Added X-Ray button to slideout. Tweaked flag slideout buttons
[CL 2752704 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -130,7 +130,7 @@ bUseMouseForTouch=False
 +SpectatorBinds=(KeyName=Divide,Command="ViewFlag 0")
 +SpectatorBinds=(KeyName=Multiply,Command="ViewFlag 1")
 +SpectatorBinds=(KeyName=PageDown,Command="ViewProjectile",FriendlyName="Projectile Cam")
-+SpectatorBinds=(KeyName=PageUp,Command="ToggleTacCom",FriendlyName="Toggle TacCom")
++SpectatorBinds=(KeyName=PageUp,Command="ToggleTacCom")
 +SpectatorBinds=(KeyName=NumPadOne,Command="ViewCamera 1")
 +SpectatorBinds=(KeyName=NumPadTwo,Command="ViewCamera 2")
 +SpectatorBinds=(KeyName=NumPadThree,Command="ViewCamera 3")
