Static mesh lod bias by way of distance scalar, only on low end
[CL 2757234 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultScalability.ini
+++ b/UnrealTournament/Config/DefaultScalability.ini
@@ -22,18 +22,22 @@ r.MSAA.CompositingSampleCount=4
 [ViewDistanceQuality@0]
 r.SkeletalMeshLODBias=2
 r.ViewDistanceScale=1.0
+r.StaticMeshLODDistanceScale=10
 
 [ViewDistanceQuality@1]
 r.SkeletalMeshLODBias=1
 r.ViewDistanceScale=1.0
+r.StaticMeshLODDistanceScale=1
 
 [ViewDistanceQuality@2]
 r.SkeletalMeshLODBias=0
 r.ViewDistanceScale=1.0
+r.StaticMeshLODDistanceScale=1
 
 [ViewDistanceQuality@3]
 r.SkeletalMeshLODBias=0
 r.ViewDistanceScale=1.0
+r.StaticMeshLODDistanceScale=1
 
 ;-----------------------------------------------------------------------------------------------------------------
 
