--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -32,6 +32,7 @@ bSpeedHackDetection=true
 MaxTimeMargin=0.25
 MinTimeMargin=-0.25
 TimeMarginSlack=0.1
+MainScoreboardDisplayTime=5.0
 
 [/Script/UnrealTournament.UTBotConfig]
 +BotCharacters=(PlayerName="Malcolm",Tactics=0.5,MapAwareness=0.7)
