added CTF-Plaza to ini files
[CL 2765028 by Sidney Rauchberger in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -125,6 +125,7 @@ GoalScore=0
 bLobbyAllowJoinInProgress=true
 +MapRotation=/Game/RestrictedAssets/Maps/CTF-Face
 +MapRotation=/Game/RestrictedAssets/Maps/CTF-TitanPass
++MapRotation=/Game/RestrictedAssets/Maps/WIP/CTF-Plaza
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/CTF-Bigrock
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/CTF-Blank
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/CTF-Volcano
