--- a/UnrealTournament/Config/DefaultRules.ini
+++ b/UnrealTournament/Config/DefaultRules.ini
@@ -47,3 +47,4 @@ DefaultMap=/Game/RestrictedAssets/Maps/CTF-TitanPass
 +CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Lance
 +CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Mine
 +CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Quick
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Plaza
