--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -37,6 +37,7 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Solo
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Column
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-RGB
++Map=/Game/RestrictedAssets/Maps/WIP/CTF-Plaza
 +Map=/Game/RestrictedAssets/Maps/RaceTrack
 +Map=/Game/RestrictedAssets/Tutorials/TUT-MovementTraining
 +Map=/Game/RestrictedAssets/Tutorials/TUT-WeaponTraining
