added DM-Sand to cook list/default game
[CL 2766082 by Sidney Rauchberger in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -46,6 +46,7 @@ MainScoreboardDisplayTime=5.0
 
 [/Script/UnrealTournament.UTDMGameMode]
 +MapRotation=/Game/RestrictedAssets/Maps/DM-Outpost23
++MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Sand
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-RGB
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Solo
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Temple
@@ -107,6 +108,7 @@ TimeLimit=2
 
 [/Script/UnrealTournament.UTTeamDMGameMode]
 +MapRotation=/Game/RestrictedAssets/Maps/DM-Outpost23
++MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Sand
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Temple
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-DeckTest
 +MapRotation=/Game/RestrictedAssets/Maps/WIP/DM-Focus
