--- a/UnrealTournament/Config/DefaultEditor.ini
+++ b/UnrealTournament/Config/DefaultEditor.ini
@@ -38,6 +38,7 @@ SimpleMapName=/Game/RestrictedAssets/Maps/Example_Map
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-Column
 +Map=/Game/RestrictedAssets/Maps/WIP/DM-RGB
 +Map=/Game/RestrictedAssets/Maps/WIP/CTF-Plaza
++Map=/Game/RestrictedAssets/Maps/WIP/DM-Sand
 +Map=/Game/RestrictedAssets/Maps/RaceTrack
 +Map=/Game/RestrictedAssets/Tutorials/TUT-MovementTraining
 +Map=/Game/RestrictedAssets/Tutorials/TUT-WeaponTraining
