Added config bTestDailyChallenges property to UTChallengeManager to easily test all daily challenges in dev branch.
[CL 2766988 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -371,3 +371,6 @@ CurrentActionBonus=11.0
 
 [/Script/UnrealTournament.UTMenuGameMode]
 MenuMusicAssetName=/Game/RestrictedAssets/Audio/Music/Music_UTMenu_Classic.Music_UTMenu_Classic
+
+[/Script/Unrealtournament.UTChallengeManager]
+bTestDailyChallenges=false
