Added Team Showdown to default game modes.
[CL 2767270 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultRules.ini
+++ b/UnrealTournament/Config/DefaultRules.ini
@@ -19,6 +19,7 @@
 +AllowedRulesets=iCTF
 +AllowedRulesets=iCTF+t
 +AllowedRulesets=LGiCTF
++AllowedRulesets=TEAMSHOWDOWN
 
 [LGiCTF UTGameRuleset]
 UniqueTag=LGiCTF
