Fixed the hub match start button not displaying the # of players needed if an ini flag wasn't set Changed all of the min # of players needed to 2 for now Made it so spectator passwords do not trigger the lock icon.
[CL 2770597 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -295,6 +295,7 @@ InstancePortStep=10
 MaxInstances=16
 ServerRefreshCheckpoint=24
 LobbyMaxTickRate=15
+bAllowInstancesToStartWithBots=true
 
 [/Script/UnrealTournament.UTLobbyGameState]
 ServerName=MY HUB
