Changed LogWorld logging level to Warning.
[CL 2785470 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -168,6 +168,7 @@ LogActorComponent=Warning
 LogD3D11RHI=Warning
 LogHMD=Error
 LogTemp=Warning
+LogWorld=Warning
 
 [/Script/UnrealTournament.UTLocalPlayer]
 bNoMidGameMenu=false
