Fix F9 screenshot bind
[CL 2790345 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultInput.ini
+++ b/UnrealTournament/Config/DefaultInput.ini
@@ -123,7 +123,7 @@ bUseMouseForTouch=False
 +CustomBinds=(KeyName=E,Command="SwitchToBestWeapon")
 +CustomBinds=(KeyName=H,Command="FeignDeath")
 +CustomBinds=(KeyName=F6,Command="UTBugIt auto")
-+CustomBinds=(Key=F9,Command="shot showui")
++CustomBinds=(KeyName=F9,Command="shot showui")
 +CustomBinds=(KeyName=Pause,Command="Pause")
 
 +SpectatorBinds=(KeyName=Home,Command="EnableAutoCam")
