Skip metal shader cooking for now
[CL 2794634 by Peter Knepley in UT-Clean branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2389,8 +2389,8 @@ MinimumOSVersion=MSOS_Vista
 +TargetedRHIs=GLSL_150
  
 [/Script/MacTargetPlatform.MacTargetSettings]
-+TargetedRHIs=SF_METAL_SM4
-+TargetedRHIs=SF_METAL_SM5
+;+TargetedRHIs=SF_METAL_SM4
+;+TargetedRHIs=SF_METAL_SM5
 +TargetedRHIs=GLSL_150_MAC
 
 [HMDPluginPriority]
