Whitelist some asset tags
#codereview Matt.Oelfke

[CL 2795346 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -341,3 +341,18 @@ Boot=(Type=Boot,Filename="%GAMEDIR%DerivedDataCache/Boot.ddc",MaxCacheSize=2000)
 McpClientCommandUrl="/api/game/v2/profile/`accountId/client/`fname?profileId=`profileId"
 McpDedicatedServerCommandUrl="/api/game/v2/profile/`accountId/dedicated_server/`fname?profileId=`profileId"
 
+[AssetRegistry]
+;Map Tags
++CookedTagsWhitelist=(Class=*,Tag=Title)
++CookedTagsWhitelist=(Class=*,Tag=Author)
++CookedTagsWhitelist=(Class=*,Tag=Description)
++CookedTagsWhitelist=(Class=*,Tag=OptimalPlayerCount)
++CookedTagsWhitelist=(Class=*,Tag=OptimalTeamPlayerCount)
++CookedTagsWhitelist=(Class=*,Tag=ScreenshotReference)
+;Entitlement Tags
++CookedTagsWhitelist=(Class=*,Tag=Entitlement)
++CookedTagsWhitelist=(Class=*,Tag=RequiredAchievement)
++CookedTagsWhitelist=(Class=*,Tag=bRequiresItem)
++CookedTagsWhitelist=(Class=*,Tag=CosmeticName)
++CookedTagsWhitelist=(Class=*,Tag=DisplayName)
++CookedTagsWhitelist=(Class=*,Tag=Ammo)
