Round based CTF WIP.
[CL 2804278 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -84,6 +84,7 @@ InactivePlayerStateLifeSpan=1200
 +GameModeClassAliases=(ShortName="DM",GameClassName="/Script/UnrealTournament.UTDMGameMode")
 +GameModeClassAliases=(ShortName="TDM",GameClassName="/Script/UnrealTournament.UTTeamDMGameMode")
 +GameModeClassAliases=(ShortName="CTF",GameClassName="/Script/UnrealTournament.UTCTFGameMode")
++GameModeClassAliases=(ShortName="RCTF",GameClassName="/Script/UnrealTournament.UTCTFRoundGame")
 +GameModeClassAliases=(ShortName="DUEL",GameClassName="/Script/UnrealTournament.UTDuelGame")
 +GameModeClassAliases=(ShortName="SHOWDOWN",GameClassName="/Script/UnrealTournament.UTShowdownGame")
 +GameModeClassAliases=(ShortName="TEAMSHOWDOWN",GameClassName="/Script/UnrealTournament.UTTeamShowdownGame")
