Don't use networked DDC in UT
[CL 2805598 by Peter Knepley in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultEngine.ini
+++ b/UnrealTournament/Config/DefaultEngine.ini
@@ -356,3 +356,14 @@ McpDedicatedServerCommandUrl="/api/game/v2/profile/`accountId/dedicated_server/`
 +CookedTagsWhitelist=(Class=*,Tag=CosmeticName)
 +CookedTagsWhitelist=(Class=*,Tag=DisplayName)
 +CookedTagsWhitelist=(Class=*,Tag=Ammo)
+
+[DerivedDataBackendGraph]
+MinimumDaysToKeepFile=7
+Root=(Type=KeyLength, Length=120, Inner=AsyncPut)
+AsyncPut=(Type=AsyncPut, Inner=Hierarchy)
+Hierarchy=(Type=Hierarchical, Inner=Boot, Inner=Pak, Inner=Local)
+Boot=(Type=Boot, Filename="%GAMEDIR%DerivedDataCache/Boot.ddc", MaxCacheSize=512)
+Local=(Type=FileSystem, ReadOnly=false, Clean=false, Flush=false, PurgeTransient=true, DeleteUnused=true, UnusedFileAge=34, FoldersToClean=-1, Path=../../../Engine/DerivedDataCache, EnvPathOverride=UE-LocalDataCachePath)
+Pak=(Type=ReadPak, Filename="%GAMEDIR%DerivedDataCache/DDC.ddp")
+Shared=
+AltShared=
