Added round intermission score text.
[CL 2811274 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -272,6 +272,7 @@ bCustomWeaponCrosshairs=True
 +RequiredHudWidgetClasses="/Game/RestrictedAssets/UI/HUDWidgets/bpWH_KillIconMessages.bpWH_KillIconMessages_C"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Spectator"
 +RequiredHudWidgetClasses="/Script/UnrealTournament.UTCTFScoreboard"
++RequiredHudWidgetClasses="/Script/UnrealTournament.UTHUDWidget_Intermission"
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 +DirectoriesToAlwaysCook=(Path="RestrictedAssets/Audio/AnnouncerReward")
