New Bins for the Testers
[CL 2811939 by Joe Wilcox in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultRules.ini
+++ b/UnrealTournament/Config/DefaultRules.ini
@@ -1,4 +1,5 @@
 [/Script/UnrealTournament.UTEpicDefaultRulesets]
++RuleCategories=(CategoryName=Holiday,CategoryButtonText="Holiday")
 +RuleCategories=(CategoryName=DeathMatch,CategoryButtonText="Deathmatch")
 +RuleCategories=(CategoryName=TeamPlay,CategoryButtonText="Team Play")
 +RuleCategories=(CategoryName=InstaGib,CategoryButtonText="InstaGib")
@@ -20,6 +21,8 @@
 +AllowedRulesets=iCTF+t
 +AllowedRulesets=LGiCTF
 +AllowedRulesets=TEAMSHOWDOWN
++AllowedRulesets=CTT
++AllowedRulesets=CTTBig
 
 [LGiCTF UTGameRuleset]
 UniqueTag=LGiCTF
@@ -38,6 +41,59 @@ DefaultMap=/Game/RestrictedAssets/Maps/CTF-TitanPass
 +MapPrefixes=CTF
 
 
++CustomMapList=/Game/RestrictedAssets/Maps/CTF-TitanPass
++CustomMapList=/Game/RestrictedAssets/Maps/CTF-Face
++CustomMapList=/Game/EpicInternal/Pistola/CTF-Pistola
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Blank
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-BigRock
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Dam
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Volcano
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Lance
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Mine
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Quick
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Plaza
+
+
+[CTT UTGameRuleset]
+UniqueTag=CTT
+Title=Capture the Tree
+Tooltip=!! Happy Holidays !!
+Description=Happy Holidays -- Capture the Tree is a fun holiday themed version of CTF.  Pickup presents and eat Candy Canes while trying to stop your opponents from stealing your tree..\n\n<UT.Hub.RulesText_Small>Maximum of %MaxPlayers% players allowed.</>
+MaxPlayers=12
+MinPlayersToStart=2;
+DisplayTexture=Texture2D'/Game/RestrictedAssets/UI/GameModeBadges/GB_CTF.GB_CTF'
+GameMode=CTF
+GameOptions=?TimeLimit=14?GoalScore=0?Mutator=MutCTT
+Categories=Holiday
+bTeamGame=true
+DefaultMap=/Game/RestrictedAssets/Maps/CTF-TitanPass
++MapPrefixes=CTF
++CustomMapList=/Game/RestrictedAssets/Maps/CTF-TitanPass
++CustomMapList=/Game/RestrictedAssets/Maps/CTF-Face
++CustomMapList=/Game/EpicInternal/Pistola/CTF-Pistola
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Blank
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-BigRock
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Dam
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Volcano
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Lance
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Mine
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Quick
++CustomMapList=/Game/RestrictedAssets/Maps/WIP/CTF-Plaza
+
+[CTTBig UTGameRuleset]
+UniqueTag=CTTBig
+Title=CTT - Big Game
+Tooltip=!! Happy Holidays !!
+Description=Happy Holidays -- Capture the Tree is a fun holiday themed version of CTF.  Pickup presents and eat Candy Canes while trying to stop your opponents from stealing your tree..\n\n<UT.Hub.RulesText_Small>Maximum of %MaxPlayers% players allowed.</>
+MaxPlayers=24
+MinPlayersToStart=2;
+DisplayTexture=Texture2D'/Game/RestrictedAssets/UI/GameModeBadges/GB_LargeCTF.GB_LargeCTF'
+GameMode=CTF
+GameOptions=?TimeLimit=14?GoalScore=0?Mutator=MutCTT
+Categories=Holiday
+bTeamGame=true
+DefaultMap=/Game/RestrictedAssets/Maps/CTF-TitanPass
++MapPrefixes=CTF
 +CustomMapList=/Game/RestrictedAssets/Maps/CTF-TitanPass
 +CustomMapList=/Game/RestrictedAssets/Maps/CTF-Face
 +CustomMapList=/Game/EpicInternal/Pistola/CTF-Pistola
