Made character scaling config.
[CL 2819515 by Steve Polge in UT-Clean branch]

--- a/UnrealTournament/Config/DefaultGame.ini
+++ b/UnrealTournament/Config/DefaultGame.ini
@@ -33,6 +33,7 @@ MaxTimeMargin=0.25
 MinTimeMargin=-0.25
 TimeMarginSlack=0.1
 MainScoreboardDisplayTime=5.0
+CharScale=1.15
 
 [/Script/UnrealTournament.UTBotConfig]
 +BotCharacters=(PlayerName="Malcolm",Tactics=0.5,MapAwareness=0.7)
